# SASA-Analysis

./: .gitignore  CLAUDE.md  LICENSE.md  MANIFEST.in  README.md  TESTING.md  ToDo.md  __init__.py  build.sh  env.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  sasa_lammps.py  setup.py
SASA_example/: NearestNeighbors.txt  SASA_OutputAnalysis.py  SASA_rotationfile.py  energies_species.txt  vmd.tcl
SASA_example/.spyproject/config/: workspace.ini
SASA_example/h-ion/: data.Cvi_nowater  energy.xyz  etot  in.SASA  lammps_SASA-1atom.py  sasa.xyz  spec.xyz
SASA_example/h2o2/: energy.xyz  etot  lammps_SASA-run.py  rotation.txt  spec.xyz
build_recipe/: build.sh  meta.yaml
docs/: sasa_lammps.html
docs/source/: api.rst  conf.py  index.rst  installation.rst
example/: element_library.txt  lysozyme_part.gro  sasa_example.py
sasa_ext/: __init__.py  sasa_core.c  sasa_core.h  sasa_module.c
sasa_lammps/: ToDo.md  __init__.py  constants.py  conversion.py  execution.py  gro2lammps.py  helper.py  in.pre  in.template  lammps_manager.py  out_analysis.py  postprocessing.py  resource_loader.py  sasa_core.py  sasa_lammps.py  sasa_main.py  utils.py
sasa_lammps/resources/: in.template
sasaanalysis.egg-info/: PKG-INFO  SOURCES.txt
src/: .sasa_lammps.py.swp  sasa_lammps.py
test/: generate_vmd_reference.py
test/resources/: test_lysozyme_small_probe.xyz
testing/: Cvi_nowater.xyz  etot  in.SASA  in.append  log.lammps  sasa.xyz  thermolog1
testing/external_libs_test/vmd-python/: vmd-python_sasa_test.py
tests/: README.md  __init__.py  conftest.py  generate_vmd_reference.py  test_api.py  test_core_components.py  test_input_validation.py  test_performance.py  test_python_modules.py  test_standalone_modules.py  test_vmd_integration.py
tests/resources/: 1crn.xyz  1mbn.xyz  1rnh.xyz  1ubq.xyz  5pti.xyz  etot  lysozyme_full.gro  spec.xyz  test_lysozyme_medium.xyz
