[build-system]
requires = ["setuptools>=45", "wheel", "numpy>=1.15.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sasa_lammps"
version = "0.3.0"
description = "LAMMPS-based solvent accessible surface area analysis"
authors = [{name = "Hanna-Friederike Poggemann"}, {name = "Simon Homann"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.15.0",
    "ovito>=3.0.0",
    "tqdm",
]

[project.optional-dependencies]
test = ["pytest>=6.0.0"]
