[build-system]
requires = ["setuptools>=80.9.0", "wheel", "numpy>=2.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sasa_lammps"
version = "0.4.0"
description = "LAMMPS-based solvent accessible surface area analysis"
authors = [{name = "Hanna-Friederike Poggemann"}, {name = "Simon Homann"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=2.3.0",
    "ovito>=3.14.0",
    "pandas>=2.3.0",
    "tqdm>=4.67.0",
    "scipy>=1.14.0",
    "matplotlib>=3.10.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]

