[build-system]
requires = ["setuptools>=80.9.0", "wheel", "numpy>=1.20.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sasa_lammps"
version = "0.4.0"
description = "LAMMPS-based solvent accessible surface area analysis"
authors = [{name = "Hanna-Friederike Poggemann"}, {name = "Simon Homann"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20.0",
    "ovito>=3.8.0",
    "pandas>=1.3.0",
    "tqdm>=4.50.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "scipy>=1.6.0"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]

